--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,5 +4,25 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
-@import './base';
+// @import './example';
+
+
+
+//Base
+@import 'base/normalize';
+@import 'base/base';
+
+// Utils
+@import 'utils/variables';
+@import 'utils/_visually-hidden';
+@import 'utils/mixin';
+
+// Components
+@import 'components/container';
+@import 'components/titles';
+
+// Layout
+@import 'layout/header';
+@import 'layout/products';
+@import 'layout/about';
+
