--- a/src/sass/utils/__variables.scss
+++ b/src/sass/utils/__variables.scss
@@ -15,6 +15,8 @@ $text-secondary: #ffffff;
 
 $bg-hero: #FFB8CA;
 $bg-section: #FFF5F6;
+$bg-section2: #F0D1A5;
+$bg-section3: #C2E297;
 $bg-mobilemenu: #E17992;
 
 
