--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,10 +3,20 @@
         <p class="section-subtitle">100% natural</p>
         <h2 class="section-title">Products</h2>
 
-        <ul class="products__list">
+        <ul class="products__list" style="color: cyan;">
             <li class="products__item products__item--bg-color">
                 <div class="products__thumb">
-                    <img src="../images/products/home-pic1.png" alt="Pink ice-cream">
+                    <img src="images/products/home-pic1.png" alt="Pink ice-cream">
+                </div>
+                
+                <h3 class="products__name">Ice cream</h3>
+                <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                </p>
+            </li>
+                
+            <li>
+                <div class="products__thumb">
+                    <img src="images/products/home-pic1.png" alt="Pink ice-cream">
                 </div>
                 
                 <h3 class="products__name">Ice cream</h3>
@@ -15,11 +25,13 @@
             </li>
 
             <li>
-
-            </li>
-
-            <li>
-
+                <div class="products__thumb">
+                    <img src="images/products/home-pic1.png" alt="Pink ice-cream">
+                </div>
+                
+                <h3 class="products__name">Ice cream</h3>
+                <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                </p>
             </li>
         </ul>
     </div>
