--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,5 +1,14 @@
+.products__list {
+    display: flex;
+    justify-content: center;
+}
+
 .products__item {
     text-align: center;
+}
+
+.products__item:not(:last-child) {
+    margin-right: 24px;
 }
 
 .products__item--bg-color {
