--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,9 +1,9 @@
 <div class="products section">
-    <div class="products__container">
+    <div class="container">
         <p class="section-subtitle">100% natural</p>
         <h2 class="section-title">Products</h2>
 
-        <ul class="products__list" style="color: cyan;">
+        <ul class="products__list">
             <li class="products__item products__item--bg-color">
                 <div class="products__thumb">
                     <img src="images/products/home-pic1.png" alt="Pink ice-cream">
@@ -14,7 +14,7 @@
                 </p>
             </li>
                 
-            <li>
+            <li  class="products__item products__item--bg-color>
                 <div class="products__thumb">
                     <img src="images/products/home-pic1.png" alt="Pink ice-cream">
                 </div>
@@ -24,7 +24,7 @@
                 </p>
             </li>
 
-            <li>
+            <li  class="products__item products__item--bg-color>
                 <div class="products__thumb">
                     <img src="images/products/home-pic1.png" alt="Pink ice-cream">
                 </div>
