--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,7 +4,7 @@
         <h2 class="section-title">Products</h2>
 
         <ul class="products__list">
-            <li class="products__item products__item--bg-color">
+            <li class="products__item">
                 <div class="products__thumb">
                     <img src="images/products/home-pic1.png" alt="Pink ice-cream">
                 </div>
@@ -14,7 +14,7 @@
                 </p>
             </li>
                 
-            <li  class="products__item products__item--bg-color>
+            <li  class="products__item">
                 <div class="products__thumb">
                     <img src="images/products/home-pic1.png" alt="Pink ice-cream">
                 </div>
@@ -24,7 +24,7 @@
                 </p>
             </li>
 
-            <li  class="products__item products__item--bg-color>
+            <li  class="products__item">
                 <div class="products__thumb">
                     <img src="images/products/home-pic1.png" alt="Pink ice-cream">
                 </div>
